add styles for react-phone-number-input component

--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -1,6 +1,7 @@
 @import "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
 @import 'katex/dist/katex.min.css';
+@import "react-phone-number-input/style.css";
 
 @tailwind base;
 @tailwind components;
